--- a/src/trang-chu/trang-chu.html
+++ b/src/trang-chu/trang-chu.html
@@ -16,7 +16,7 @@
     <div class="pb-12">
         <div class="max-w-[1920px] mx-auto font-nunito ">
             <div class="w-full">
-                <img src="../assets/images/img-kien/img_2.png" class="object-cover w-full" alt="Banner">
+                <img src="../assets/images/img-kien/banner.svg" class="object-cover w-full" alt="Banner">
             </div>
             <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-4 gap-4 justify-items-center pt-[46px] align-items-center">
                 <div class="flex flex-row items-center gap-5">
@@ -276,7 +276,7 @@
         <div class="flex gap-12 place-content-center">
             <div>
                 <div>
-                    <img src="../assets/images/img-kien/img_1.png" alt="">
+                    <img src="../assets/images/img-kien/summer-sale.svg" alt="">
                 </div>
             </div>
             <div>
@@ -353,7 +353,7 @@
     </div>
     <div class="pt-16 flex gap-24 place-content-center bg-[#FAFAFA]">
         <div>
-            <img src="../assets/images/img-kien/img.png" alt="">
+            <img src="../assets/images/img-kien/anh-dat.svg" alt="">
         </div>
         <div>
             <div class="flex items-center gap-2">
