--- a/src/html/baiviet.html
+++ b/src/html/baiviet.html
@@ -59,13 +59,12 @@
                             <p class="text-14 text-[#4f4f4f] font-nunito text-green-600">
                                 Để hiểu rõ hơn chất lượng sản phẩm Cà chua hữu cơ của Nông Thảo, mời bạn đọc tìm hiểu thêm về quy trình trồng và thu hoạch theo tiêu chuẩn VietGap của chúng tôi.
                             </p>
-                            <div class="bg-gray-100 w-auto mt-3 h-300">
+                            <div class="bg-gray-100 w-auto ">
                                 <h2 class="text-2xl font-semibold ml-5 ">Mục lục bài viết</h2>
-                                <hr class="border-t-2 border-gray-300 mt-5 ml-3 mr-3">
+                                <hr class="border-t-2 border-gray-300 mt-5 ml-3 ">
                                 <h2 class="text-xl font-semibold mt-2 ml-5">1. Quy trình làm đất</h2>
                                 <h2 class="text-x font-seminomal mt-2 ml-10">1.1. 5 bước xử lí đất đơn giản </h2>
                                 <h2 class="text-xl font-semibold mt-2 ml-5 mb-10">2. Quy trình làm trồng </h2>
-
                             </div>
                             <img src="\src\assets\images\img-dzung\people.png" alt="2 nguoi Nông dân" class="max-w-full h-auto mb-3">
                             <p>
@@ -89,8 +88,10 @@
                             </p>
                     
                             <section class="mt-8">
+                                <hr class="border-t-2 border-gray-300  ">
                                 <h2 class="text-2xl font-semibold mb-4">06 bình luận</h2>
-                                <div class="flex justify-end mb-4">
+                                <hr class="border-t-2 border-gray-300 ">
+                                <div class="flex justify-start mb-4 mt-4">
                                     <button class="text-sm text-gray-600 hover:underline">Chia sẻ ngay:</button>
                                     <a href="#" class="ml-2"><img src="\src\assets\images\img-dzung\faceg.png" alt="Facebook" class="w-5 h-5"></a>
                                     <a href="#" class="ml-2"><img src="\src\assets\images\img-dzung\linklng.png" alt="LinkedIn" class="w-5 h-5"></a>
@@ -104,7 +105,7 @@
                                         <div>
                                             <h3 class="font-semibold">Vi Khanh</h3>
                                             <p class="text-sm text-gray-700">Thật là một bài viết quá hay về quy trình chăm sóc chanh tây...</p>
-                                            <button class="text-sm text-gray-500 mt-1 hover:underline">Trả lời</button>
+                                            <button class="text-sm text-gray-500  hover:underline">Trả lời</button>
                                         </div>
                                     </div>
                                     <div class="flex items-start">
@@ -112,7 +113,7 @@
                                         <div>
                                             <h3 class="font-semibold">Vi Khanh</h3>
                                             <p class="text-sm text-gray-700">Thật là một bài viết quá hay về quy trình chăm sóc chanh tây...</p>
-                                            <button class="text-sm text-gray-500 mt-1 hover:underline">Trả lời</button>
+                                            <button class="text-sm text-gray-500  hover:underline">Trả lời</button>
                                         </div>
                                     </div>
                                     <div class="flex items-start">
@@ -120,7 +121,7 @@
                                         <div>
                                             <h3 class="font-semibold">Vi Khanh</h3>
                                             <p class="text-sm text-gray-700">Thật là một bài viết quá hay về quy trình chăm sóc chanh tây...</p>
-                                            <button class="text-sm text-gray-500 mt-1 hover:underline">Trả lời</button>
+                                            <button class="text-sm text-gray-500  hover:underline">Trả lời</button>
                                         </div>
                                     </div>
                                     <div class="flex items-start">
@@ -128,7 +129,7 @@
                                         <div>
                                             <h3 class="font-semibold">Vi Khanh</h3>
                                             <p class="text-sm text-gray-700">Thật là một bài viết quá hay về quy trình chăm sóc chanh tây...</p>
-                                            <button class="text-sm text-gray-500 mt-1 hover:underline">Trả lời</button>
+                                            <button class="text-sm text-gray-500  hover:underline">Trả lời</button>
                                         </div>
                                     </div>
                                     <div class="flex items-start">
@@ -136,7 +137,7 @@
                                         <div>
                                             <h3 class="font-semibold">Vi Khanh</h3>
                                             <p class="text-sm text-gray-700">Thật là một bài viết quá hay về quy trình chăm sóc chanh tây...</p>
-                                            <button class="text-sm text-gray-500 mt-1 hover:underline">Trả lời</button>
+                                            <button class="text-sm text-gray-500  hover:underline">Trả lời</button>
                                         </div>
                                     </div>
                                     <div class="flex items-start">
@@ -144,7 +145,7 @@
                                         <div>
                                             <h3 class="font-semibold">Vi Khanh</h3>
                                             <p class="text-sm text-gray-700">Thật là một bài viết quá hay về quy trình chăm sóc chanh tây...</p>
-                                            <button class="text-sm text-gray-500 mt-1 hover:underline">Trả lời</button>
+                                            <button class="text-sm text-gray-500 hover:underline">Trả lời</button>
                                         </div>
                                     </div>
                                     <div class="flex items-start">
@@ -152,7 +153,7 @@
                                         <div>
                                             <h3 class="font-semibold">Vi Khanh</h3>
                                             <p class="text-sm text-gray-700">Thật là một bài viết quá hay về quy trình chăm sóc chanh tây...</p>
-                                            <button class="text-sm text-gray-500 mt-1 hover:underline">Trả lời</button>
+                                            <button class="text-sm text-gray-500 hover:underline">Trả lời</button>
                                         </div>
                                     </div>
                                    
@@ -176,8 +177,12 @@
                                             <input type="email" id="email" name="email" class="w-full px-3 py-2 text-gray-700 border rounded-lg focus:outline-none " required>
                                         </div>
                                     </div>
-                                    <button type="submit" class="bg-green-500 text-white px-4 py-2 rounded-lg hover:bg-green-600 transition duration-300">Gửi bình luận</button>
-                                </form>
+                                    <div class="flex justify-center">
+                                        <button type="submit" class="bg-green-500 text-white px-4 py-2 rounded-lg hover:bg-green-600 transition duration-300">
+                                            Gửi bình luận
+                                        </button>
+                                    </div>
+                                    </form>
                             </section>
                         </div>
                     </main>
