--- a/src/danh-muc-page/order-success.html
+++ b/src/danh-muc-page/order-success.html
@@ -100,7 +100,7 @@
                         <div class="font-nunito font-[700] text-[18px] pt-[20px] px-[26px]">Địa chỉ giao hàng</div>
                         <div class="w-full border-[0.5px] border-[#cccccc] mt-[15px]"></div>
                         <div class="px-[26px]">
-                            <div class="flex items-center gap-[12px]">
+                            <div class="flex items-center gap-[12px] mt-[16px]">
                                 <div class="font-nunito text-gray-700">Vi Ngọc Khánh</div>
                                 <div class="font-nunito text-white bg-red-600 px-[10px] py-[4px]">0988818841</div>
                             </div>
