--- a/src/danh-muc-page/footer.html
+++ b/src/danh-muc-page/footer.html
@@ -38,29 +38,44 @@
         </div>
         <div class="max-w-[1170px] mx-auto grid grid-cols-3 gap-[74px] pt-[37.5px]">
             <div class="col-span-1 flex justify-between max-w-6xl text-white py-5 sm:flex sm:flex-col">
-                <div class="max-w-sm">
-                    <div>
-                        <img src="\src\assets\images\img-dzung\lgfooter.png" alt="Nông Thảo"
-                            class="h-10 mb-4 brightness-200">
-                        <img src="\src\assets\images\img-dzung\tinhhoa.png" alt="Nông Thảo"
-                            class="h-auto mb-4 brightness-200">
+                <div class="">
+                    <div class="max-w-[262px]">
+                        <div class="w-full">
+                            <img src="\src\assets\images\img-dzung\lgfooter.png" alt="Nông Thảo"
+                                class="h-10 mb-4 brightness-200">
+                        </div>
+                        <div class="w-full">
+                            <img src="\src\assets\images\img-dzung\tinhhoa.png" alt="Nông Thảo"
+                                class="h-auto mb-4 brightness-200">
+                        </div>
                     </div>
-                    <p class="text-sm">MST: 0123456789/10 - Ngày cấp: 15/02/2023</p>
-                    <p class="text-sm">Nơi cấp: Sở KH&ĐT TP Hồ Chí Minh</p>
-                    <div class="flex justify-between">
-                        <a href="#" class="text-white hover:text-gray-300"><img
-                                src="/src/assets/images/img-dzung/shopee.png" alt="YouTube" class="h-auto"></a>
-                        <a href="#" class="text-white hover:text-gray-300"><img
-                                src="/src/assets/images/img-dzung/tiki.png" alt="Zalo" class="h-auto"></a>
-                        <a href="#" class="text-white hover:text-gray-300"><img
-                                src="/src/assets/images/img-dzung/laza.png" alt="Facebook" class="h-auto"></a>
-                        <a href="#" class="text-white hover:text-gray-300"><img
-                                src="/src/assets/images/img-dzung/face.png" alt="LinkedIn" class="h-auto"></a>
-                        <a href="#" class="text-white hover:text-gray-300"><img
-                                src="/src/assets/images/img-dzung/linkln.png" alt="LinkedIn" class="h-auto"></a>
-                        <a href="#" class="text-white hover:text-gray-300"><img
-                                src="/src/assets/images/img-dzung/tiktok.png" alt="TikTok" class="h-auto"></a>
-                    </div>
+                    <p class="mt-[24px] text-sm font-nunito text-[14px] text-[#FFFFFFCC]">MST: 0123456789/10 - Ngày cấp:
+                        15/02/2023</p>
+                    <p class="mt-[20px] text-sm font-nunito text-[14px] text-[#FFFFFFCC]">Nơi cấp: Sở KH&ĐT TP Hồ Chí
+                        Minh</p>
+                    <div class="flex font-nunito text-[#FFFFFFCC] items-center gap-[15px] mt-[22px]">
+                        <div class="font-nunito text-[#FFFFFF]">Liên kết</div>
+                        <div class="flex gap-[10px]">
+                            <a href="#" class="text-white hover:text-gray-300 font-nunito w-[26px]"><img
+                                    src="/src/assets/images/img-dzung/shopee.png" alt="YouTube"
+                                    class="w-full object-cover"></a>
+                            <a href="#" class="text-white hover:text-gray-300 font-nunito w-[26px]"><img
+                                    src="/src/assets/images/img-dzung/tiki.png" alt="YouTube"
+                                    class="w-full object-cover"></a>
+                            <a href="#" class="text-white hover:text-gray-300 font-nunito w-[26px]"><img
+                                    src="/src/assets/images/img-dzung/tiktok.png" alt="YouTube"
+                                    class="w-full object-cover"></a>
+                            <a href="#" class="text-white hover:text-gray-300 font-nunito w-[26px]"><img
+                                    src="/src/assets/images/img-dzung/tiki.png" alt="YouTube"
+                                    class="w-full object-cover"></a>
+                            <a href="#" class="text-white hover:text-gray-300 font-nunito w-[26px]"><img
+                                    src="/src/assets/images/img-dzung/shopee.png" alt="YouTube"
+                                    class="w-full object-cover"></a>
+                            <a href="#" class="text-white hover:text-gray-300 font-nunito w-[26px]"><img
+                                    src="/src/assets/images/img-dzung/face.png" alt="YouTube"
+                                    class="w-full object-cover"></a>
+                        </div>
+                    </div>    
                 </div>
             </div>
             <div class="col-span-2">
