--- a/src/bai-viet/nomal.html
+++ b/src/bai-viet/nomal.html
@@ -40,21 +40,21 @@
     <img src="\src\assets\images\img-dzung\nomal.png" alt="Cart" class="max-w-full hidden sm:block">
     <div class="mx-auto max-w-[1170px] p-3 sm:p-5 bg-white ">
         <div class="text-xs sm:text-sm text-black mb-3 sm:mb-3">
-            Trang chủ > <span class="text-gray-500 pt-2 sm:pt-[20px] pl-2 sm:pl-[30px]">Đây là một trang bình thường</span>
+            Trang chủ > <span class="text-gray-500 pt-2 pl-2 ">Đây là một trang bình thường</span>
         </div>
 
         <div class="sm:ml-[185px] sm:mr-[180px]">
             <main class="mx-auto flex-grow px-3 sm:px-[40px]">
-                <div class="sm:hidden font-nunito text-xl font-bold leading-tight text-left">Đây là một trang bình thường</div>
-                <div class="font-nunito text-sm sm:text-[16px] font-normal leading-relaxed sm:leading-[21.82px] text-left pt-3 sm:pt-[25px]">
+                <div class="sm:hidden font-nunito text-xl font-bold leading-tight text-left text-[#4F4F4F]">Đây là một trang bình thường</div>
+                <div class="font-nunito text-sm sm:text-[16px] font-normal leading-relaxed sm:leading-[21.82px] text-left pt-3 sm:pt-[25px] text-[#4F4F4F]">
                     There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even slightly believable. If you are going to use a passage of Lorem Ipsum, you need to be sure there isn't anything embarrassing hidden in the middle of text. All the Lorem Ipsum generators on the Internet tend to repeat predefined chunks as necessary, making this the first true generator on the Internet. It uses a dictionary of over 200 Latin words, combined with a handful of model sentence structures, to generate Lorem Ipsum which looks reasonable. The generated Lorem Ipsum is therefore always free from repetition, injected humour, or non-characteristic words etc.
                 </div>
-                <div class="pt-3 sm:pt-[25px]">
-                    <div class="hidden sm:block font-nunito text-[24px] font-bold leading-[32.74px] text-left">Đây là một trang bình thường</div>
-                    <div class="font-nunito text-sm sm:text-[16px] font-normal leading-relaxed sm:leading-[21.82px] text-left mt-3 sm:mt-[20px]">
+                <div class="pt-8 sm:pt-[25px]">
+                    <div class=" font-nunito text-xl font-bold leading-tight text-left text-[#4F4F4F]">Đây là một trang bình thường</div>
+                    <div class="font-nunito text-sm sm:text-[16px] font-normal leading-relaxed sm:leading-[21.82px] text-left mt-3 sm:mt-[20px] text-[#4F4F4F]">
                         There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even slightly believable. If you are going to use a passage of Lorem Ipsum, you need to be sure there isn't anything embarrassing hidden in the middle of text. All the Lorem Ipsum generators on the Internet tend to repeat predefined chunks as necessary, making this the first true generator on the Internet. It uses a dictionary of over 200 Latin words, combined with a handful of model sentence structures, to generate Lorem Ipsum which looks reasonable. The generated Lorem Ipsum is therefore always free from repetition, injected humour, or non-characteristic words etc.
                     </div>
-                    <div class="font-nunito text-sm sm:text-[16px] font-normal leading-relaxed sm:leading-[21.82px] text-left mt-3 sm:mt-[20px] mb-6 sm:mb-[189px]">
+                    <div class="font-nunito text-sm sm:text-[16px] font-normal leading-relaxed sm:leading-[21.82px] text-left mt-3 sm:mt-[20px] mb-6 sm:mb-[189px] text-[#4F4F4F]">
                         There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even slightly believable. If you are going to use a passage of Lorem Ipsum, you need to be sure there isn't anything embarrassing hidden in the middle of text. All the Lorem Ipsum generators on the Internet tend to repeat predefined chunks as necessary, making this the first true generator on the Internet.
                     </div>
                 </div>
