--- a/src/danh-muc-page/footer.html
+++ b/src/danh-muc-page/footer.html
@@ -10,7 +10,7 @@
 
 <body>
     <footer class="w-full bg-[#356C07] font-nunito ">
-        <div class="max-w-[1920px] mx-auto grid grid-cols-8">
+        <div class="max-w-[1920px] mx-auto grid grid-cols-3 md:grid-cols-8">
             <div class="col-span-1">
                 <img class="w-full object-cover" src="\src\assets\images\img-dzung\footer-1.png" alt="">
             </div>
@@ -20,24 +20,24 @@
             <div class="col-span-1">
                 <img class="w-full object-cover" src="\src\assets\images\img-dzung\footer-3.png" alt="">
             </div>
-            <div class="col-span-1">
+            <div class="hidden md:block col-span-1">
                 <img class="w-full object-cover" src="\src\assets\images\img-dzung\footer-1.png" alt="">
             </div>
-            <div class="col-span-1">
+            <div class="hidden md:block col-span-1">
                 <img class="w-full object-cover" src="\src\assets\images\img-dzung\footer-2.png" alt="">
             </div>
-            <div class="col-span-1">
+            <div class="hidden md:block col-span-1">
                 <img class="w-full object-cover" src="\src\assets\images\img-dzung\footer-3.png" alt="">
             </div>
-            <div class="col-span-1">
+            <div class="hidden md:block col-span-1">
                 <img class="w-full object-cover" src="\src\assets\images\img-dzung\footer-1.png" alt="">
             </div>
-            <div class="col-span-1">
+            <div class="hidden md:block col-span-1">
                 <img class="w-full object-cover" src="\src\assets\images\img-dzung\footer-2.png" alt="">
             </div>
         </div>
-        <div class="max-w-[1170px] mx-auto grid grid-cols-3 gap-[74px] pt-[37.5px]">
-            <div class="col-span-1 flex justify-between max-w-6xl text-white py-5 sm:flex sm:flex-col">
+        <div class="max-w-[1170px] mx-auto grid grid-cols-1 md:grid-cols-3 pt-[37.5px] pb-[30px]">
+            <div class="px-[25px] md:px-0 mr-0 md:mr-[74px] col-span-1 flex justify-between text-white">
                 <div class="">
                     <div class="max-w-[262px]">
                         <div class="w-full">
@@ -75,62 +75,95 @@
                                     src="/src/assets/images/img-dzung/face.png" alt="YouTube"
                                     class="w-full object-cover"></a>
                         </div>
-                    </div>    
+                    </div>
+                    <div class="block md:hidden my-[15px] border-[0.5px] border-[#EBF0FFB2]"></div>
                 </div>
             </div>
-            <div class="col-span-2">
-                <div class="grid grid-cols-3">
-                    <div class="col-span-1 flex justify-between max-w-6xl text-white sm:flex sm:flex-col">
-                        <div class="max-w-sm">
-                            <h3 class="font-semibold mb-2">Liên hệ</h3>
-                            <p class="text-sm">1 Ngụy Như Kon Tum, Phường Nhân Chính, Quận Thanh Xuân, Hà Nội</p>
-                            <p class="text-sm">0909.71.6548</p>
-                            <p class="text-sm">hello@nongthao.com</p>
+            <div class="px-[25px] md:px-0 col-span-1 md:col-span-2 font-nunito">
+                <div class="grid grid-cols-1 md:grid-cols-3">
+                    <div class="col-span-1">
+                        <div class="font-semibold md:font-bold text-[14px] text-white">LIÊN HỆ</div>
+                        <div class="block md:hidden my-[15px] border-[0.5px] border-[#EBF0FFB2]"></div>
+                        <div class="hidden md:flex mt-[23px]">
+                            <div class="w-[20px] mr-[12px]">
+                                <img class="w-full object-cover" src="../assets/images/img-andrew/icon-location.svg"
+                                    alt="">
+                            </div>
+                            <div class="flex-1 text-[#ffffffcc] text-[14px]">
+                                Tầng 4-5-6, Tòa nhà Capital Place, số 29 đường Liễu Giai, P.Ngọc Khánh, Q.Ba Đình, Hà
+                                Nội
+                            </div>
+                        </div>
+                        <div class="hidden md:flex mt-[12px]">
+                            <div class="w-[20px] mr-[12px]">
+                                <img class="w-full object-cover" src="../assets/images/img-andrew/icon-phone.svg"
+                                    alt="">
+                            </div>
+                            <div class="flex-1 text-[#ffffffcc] text-[14px]">
+                                0969.71.6848
+                            </div>
+                        </div>
+                        <div class="hidden md:flex mt-[12px]">
+                            <div class="w-[20px] mr-[12px]">
+                                <img class="w-full object-cover" src="../assets/images/img-andrew/icon-mail.svg" alt="">
+                            </div>
+                            <div class="flex-1 text-[#ffffffcc] text-[14px]">
+                                hotro@nongthao.vn
+                            </div>
                         </div>
                     </div>
-                    <div class="col-span-1 flex justify-between max-w-6xl text-white sm:flex sm:flex-col">
-                        <div class="max-w-sm">
-                            <h3 class="font-semibold mb-2">Thông tin</h3>
-                            <ul class="list-disc text-sm space-y-1">
-                                <li><a href="#">Giới thiệu Nông Thảo</a></li>
-                                <li><a href="#">Điều khoản</a></li>
-                                <li><a href="#">Chính sách bảo mật</a></li>
-                                <li><a href="#">Hướng dẫn mua hàng</a></li>
-                                <li><a href="#">Phí vận chuyển</a></li>
+                    <div class="col-span-1 md:mx-auto md:max-w-[152px]">
+                        <div class="w-full">
+                            <div class="font-[600] md:font-bold text-[14px] text-white">THÔNG TIN</div>
+                            <div class="block md:hidden my-[15px] border-[0.5px] border-[#EBF0FFB2]"></div>
+                            <ul class="hidden md:block mt-[15px]">
+                                <li class="text-[#ffffffcc] text-[14px]"><span class="font-[900]">.</span> Giới thiệu
+                                    Nông Thảo</li>
+                                <li class="text-[#ffffffcc] mt-[10px] text-[14px]"><span class="font-[900]">.</span>
+                                    Điều khoản</li>
+                                <li class="text-[#ffffffcc] mt-[10px] text-[14px]"><span class="font-[900]">.</span>
+                                    Chính sách bảo mật</li>
+                                <li class="text-[#ffffffcc] mt-[10px] text-[14px]"><span class="font-[900]">.</span>
+                                    Hướng dẫn mua hàng</li>
+                                <li class="text-[#ffffffcc] mt-[10px] text-[14px]"><span class="font-[900]">.</span> Trả
+                                    hàng & hoàn tiền</li>
+                                <li class="text-[#ffffffcc] mt-[10px] text-[14px]"><span class="font-[900]">.</span>
+                                    Nông Thảo Blogs</li>
                             </ul>
                         </div>
                     </div>
-                    <div class="col-span-1 flex justify-between max-w-6xl text-white sm:flex sm:flex-col">
-                        <div class="max-w-">
-                            <h3 class="font-semibold mb-2">Đăng ký nhận tin</h3>
-                            <p class="text-sm mb-2">Nhận ngay những ưu đãi của Nông Thảo</p>
-
-                            <form class="flex mb-8">
-                                <input type="email" placeholder="Email của bạn"
-                                    class="flex-grow px-3 py-2 rounded-l-md text-black sm:w-1">
-                                <button type="submit"
-                                    class="bg-green-500 px-4 rounded-r-md hover:bg-green-600 transition sm:w-1">
-                                    <img src="\src\assets\images\img-dzung\fly.png" alt="avatar vi khanh"
-                                        class="w-60 h-auto mb-3 sm:w-1">
-                                </button>
+                    <div class="col-span-1">
+                        <div class="font-[600] md:font-bold text-[14px] text-white">ĐĂNG KÍ NHẬN TIN</div>
+                        <div class="text-[#ffffffcc] text-[14px] mt-[23px]">Vui lòng nhập email để nhận thêm nhiều ưu
+                            đãi từ Nông Thảo</div>
+                        <div class="flex mt-[9px]">
+                            <form class="flex-1" action="">
+                                <input class="placeholder:text-[14px] w-full py-[10px] md:py-[13px] pl-[14px]" type="text"
+                                    placeholder="Email của bạn...">
                             </form>
-
-                            <!-- Hình ảnh nằm trong cùng một cột -->
-                            <div class="flex justify-between">
-                                <img src="\src\assets\images\img-dzung\gov.png" alt="avatar vi khanh"
-                                    class="img-style w-[45%] h-auto ">
-                                <img src="\src\assets\images\img-dzung\dmca.png" alt="avatar vi khanh"
-                                    class="img-style w-[45%] h-auto pl-1">
+                            <div class="bg-[#68c114] w-[47px] flex items-center justify-center">
+                                <div class="w-[24px]">
+                                    <img class="w-full object-cover"
+                                        src="../assets/images/img-andrew/icon-mail-footer.svg" alt="">
+                                </div>
+                            </div>
+                        </div>
+                        <div class="flex justify-between mt-[33px]">
+                            <div class="w-[130px]">
+                                <img class="w-full object-cover" src="../assets/images/img-andrew/footer-item1.svg"
+                                    alt="">
+                            </div>
+                            <div class="w-[83px]">
+                                <img class="w-full object-cover" src="../assets/images/img-andrew/footer-item2.svg"
+                                    alt="">
                             </div>
                         </div>
                     </div>
                 </div>
             </div>
         </div>
-        <div class="border-t border-green-700">
-            <div class="container mx-auto px-4 py-4 bg-green-800 max-w-full flex justify-center">
-                <p class="text-sm text-center">&copy; 2022 - Bản quyền thuộc về Công ty Nông Thảo</p>
-            </div>
+        <div class="text-[12px] md:text-[14px] py-[11px] flex justify-center bg-[#85a76a] text-[#ffffffcc]">
+            @2022 - Bản quyền thuộc về Công ty Nông Thảo
         </div>
     </footer>
 </body>
